solc_mutator_ossfuzz_seed_corpus/test_sol/test_9e7233bb643cc34beeff84b8fc5ff611ed70c746301695247b6de60ed8921a72_955e67ad5681340b6004ab4f1ce7e3df45ba98a8_sol.sol
==== Source:  ====

==== Source: su0.sol ====
error er0(bool ep0, bool ep1);
function f0()    
{
}
pragma solidity >= 0.0.0;
library L0 {
  function f1() external   
  {
    bytes8 l0 = bytes8(0x0000000000000000);
  }
  modifier m0() 
  {
    bool l0 = false;
    _;
  }
  function f2(bytes12 i0) public  m0()  returns(uint248 o0)
  {
    if (true)
    {
    }
    else if (((int216(14303797115132443699396142799888791402508054070121713083224388499) * (((int216(-38893842431278787491044985551853835103001179328440156002129390751) | int216(0)) | int216(0)) ** uint48(uint48(171292443081749)))) == int216(52656145834278593348959013841835216159447547700274555627155488767)))
    {
    }
  }
  address payable public constant cons0 = payable(0xFFfFfFffFFfffFFfFFfFFFFFffFFFffffFfFFFfF);
  using L0 for *;
  modifier m1() 
  {
    _;
  }
  modifier m2(bytes memory i0) 
  {
    _;
  }
  modifier m3() 
  {
    assembly
    {
    }
    _;
  }
}
struct St0 {
  bytes1 el0;
}
int240 constant cons1 = (((~(((int240((int240(-836412885805506734401370937856745662070916033478897618164414991936072497) / int240(0))) - int240(229843748851584466652588621259008734687748862474242442488819502201279749)) | int240(0)))) + int240(0)) % int240(883423532389192164791648750371459257913741948437809479060803100646309887));

==== Source: su1.sol ====
uint40 constant cons2 = (~((((~(((uint40(555051171531) << uint152(uint152(2494392795613385257609088486192709897178122530))) & uint40(1099511627775)))) | uint40(1099511627775)) | uint40(1099511627775))));
struct St1 {
  bool el0;
  bytes21 el1;
  int160 el2;
  address el3;
}
pragma solidity >= 0.0.0;
contract C0 {
  enum EN0 {
    M0, M1, M2, M3, M4, M5, M6, M7,
    M8, M9, M10, M11, M12, M13, M14, M15,
    M16, M17, M18, M19, M20, M21, M22, M23,
    M24, M25, M26, M27, M28, M29, M30, M31,
    M32, M33, M34, M35, M36, M37, M38, M39,
    M40, M41, M42
  }
  modifier m4(bytes memory i0) virtual
  {
    _;
    assembly
    {
      let al0 := i0
      pop(114519564519841352487993276789960429055215837845674325450247092373685616520484)
      al0 := cons2
      i0 := 0
    }
  }
  type T0 is bytes11;
  St1   s0;
  C0.EN0  public s1;
  bytes23  public s2;
  bool   s3;
  constructor(C0.EN0 i0,bytes23 i1,bool i2)   {
    s1 = C0.EN0.M28;
    s2 = bytes23(0x0000000000000000000000000000000000000000000000);
    s3 = false;
    unchecked {
      C0.T0 l0 = C0.T0.wrap(bytes11(0x0000000000000000000000));
    }
  }
  event ev0(function (uint232) external    ep0, function () external   returns (address payable)  ep1, string  ep2);
  error er1(C0.T0 ep0, bytes12 ep1);
  modifier m5() virtual
  {
    s0.el1 ^= bytes21(0xffffffffffffffffffffffffffffffffffffffffff);
    _;
  }
  event ev1(int152  ep0);
}
// ----
// Warning 3149: (su1.sol:34-122): The result type of the shift operation is equal to the type of the first operand (uint40) ignoring the (larger) type of the second operand (uint152) which might be unexpected. Silence this warning by either converting the first or the second operand to the type of the other.
// TypeError 7615: (su1.sol:752-757): Only direct number constants and references to such constants are supported by inline assembly.
